--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
@@ -6,44 +6,89 @@
     <title>@ViewData["Title"] - SpaceAdventures.MVC</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/SpaceAdventures.MVC.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/lib/font-awesome/css/all.css"/>
+    @*    <link rel="stylesheet" href="~/SpaceAdventures.MVC.styles.css" asp-append-version="true" />*@
+    <link rel="stylesheet" href="~/css/NavBar.css" asp-append-version="true" />
 </head>
-<body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">SpaceAdventures.MVC</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
+
+<body >
+<div class='dashboard'>
+    <div class="dashboard-nav">
+        <header><a href="#!" class="menu-toggle"><i class="fas fa-bars"></i></a><a href="#"
+                                                                                   class="brand-logo"><i
+                class=""></i> <span>SpaceAdventures</span></a></header>
+        <nav class="dashboard-nav-list"><a href="#" class="dashboard-nav-item"><i class="fas fa-home"></i>
+            Home </a><a
+                href="#" class="dashboard-nav-item active"><i class="fas fa-tachometer-alt"></i> Dashboard
+        </a><a
+                href="#" class="dashboard-nav-item"><i class="fas fa-file-upload"></i> Upload </a>
+            <div class='dashboard-nav-dropdown'><a href="#!" class="dashboard-nav-item dashboard-nav-dropdown-toggle"><i
+                    class="fas fa-photo-video"></i> Media </a>
+                <div class='dashboard-nav-dropdown-menu'><a href="#"
+                                                            class="dashboard-nav-dropdown-item">All</a><a
+                        href="#" class="dashboard-nav-dropdown-item">Recent</a><a
+                        href="#" class="dashboard-nav-dropdown-item">Images</a><a
+                        href="#" class="dashboard-nav-dropdown-item">Video</a></div>
+            </div>
+            <div class='dashboard-nav-dropdown'><a href="#!" class="dashboard-nav-item dashboard-nav-dropdown-toggle"><i
+                    class="fas fa-users"></i> Users </a>
+                <div class='dashboard-nav-dropdown-menu'><a href="#"
+                                                            class="dashboard-nav-dropdown-item">All</a><a
+                        href="#" class="dashboard-nav-dropdown-item">Subscribed</a><a
+                        href="#"
+                        class="dashboard-nav-dropdown-item">Non-subscribed</a><a
+                        href="#" class="dashboard-nav-dropdown-item">Banned</a><a
+                        href="#" class="dashboard-nav-dropdown-item">New</a></div>
+            </div>
+            <div class='dashboard-nav-dropdown'><a href="#!" class="dashboard-nav-item dashboard-nav-dropdown-toggle"><i
+                    class="fas fa-money-check-alt"></i> Payments </a>
+                <div class='dashboard-nav-dropdown-menu'><a href="#"
+                                                            class="dashboard-nav-dropdown-item">All</a><a
+                        href="#" class="dashboard-nav-dropdown-item">Recent</a><a
+                        href="#" class="dashboard-nav-dropdown-item"> Projections</a>
                 </div>
             </div>
+            <a href="#" class="dashboard-nav-item"><i class="fas fa-cogs"></i> Settings </a><a
+                    href="#" class="dashboard-nav-item"><i class="fas fa-user"></i> Profile </a>
+          <div class="nav-item-divider"></div>
+          <a
+                    href="#" class="dashboard-nav-item"><i class="fas fa-sign-out-alt"></i> Login </a>
         </nav>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
     </div>
-
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2022 - SpaceAdventures.MVC - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    <div class='dashboard-app'>
+        <header class='dashboard-toolbar'><a href="#!" class="menu-toggle"><i class="fas fa-bars"></i></a></header>
+        <div class='dashboard-content'>
+            <div class='container'>
+                <div class='card'>
+                    <div class='card-header'>
+                        <h1>Welcome to Space Adventures Platform</h1>
+                    </div>
+                    <div class='card-body'>
+                        <p></p>
+                    </div>
+                </div>
+            </div>
         </div>
-    </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
+    </div>
+</div>
+
+
+<div class="container">
+    <main role="main" class="pb-3">
+        @RenderBody()
+    </main>
+</div>
+
+<footer class="border-top footer text-muted">
+    <div class="container">
+        &copy; 2022 - SpaceAdventures<a asp-area="" asp-controller="" asp-action=""></a>
+    </div>
+</footer>
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="~/js/site.js" asp-append-version="true"></script>
+<script src="~/js/NavBar.js"></script>
+
+@await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
