--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
@@ -7,82 +7,103 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/lib/font-awesome/css/all.css"/>
-    @*    <link rel="stylesheet" href="~/SpaceAdventures.MVC.styles.css" asp-append-version="true" />*@
+    <link rel="stylesheet" href="~/SpaceAdventures.MVC.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/NavBar.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/lib/toastr.js/toastr.min.css"/>
 </head>
 
-<body class="bg"style="background-color:	rgb(156, 156, 201);">
-<div class='dashboard'>
-    <div class="dashboard-nav">
-        <header><a href="#!" class="menu-toggle"><i class="fas fa-bars"></i></a><a href="#"
-                                                                                   class="brand-logo"><i
-                class=""></i> <span>SpaceAdventures</span></a></header>
-        <nav class="dashboard-nav-list"><a href="#" class="dashboard-nav-item"><i class="fas fa-home"></i>
-            Home </a><a
-                href="#" class="dashboard-nav-item active"><i class="fas fa-tachometer-alt"></i> Dashboard
-        </a><a
-                href="#" class="dashboard-nav-item"><i class="fas fa-file-upload"></i> Upload </a>
-            <div class='dashboard-nav-dropdown'><a href="#!" class="dashboard-nav-item dashboard-nav-dropdown-toggle"><i
-                    class="fas fa-photo-video"></i> Media </a>
-                <div class='dashboard-nav-dropdown-menu'><a href="#"
-                                                            class="dashboard-nav-dropdown-item">All</a><a
-                        href="#" class="dashboard-nav-dropdown-item">Recent</a><a
-                        href="#" class="dashboard-nav-dropdown-item">Images</a><a
-                        href="#" class="dashboard-nav-dropdown-item">Video</a></div>
-            </div>
-            <div class='dashboard-nav-dropdown'><a href="#!" class="dashboard-nav-item dashboard-nav-dropdown-toggle"><i
-                    class="fas fa-users"></i> Users </a>
-                <div class='dashboard-nav-dropdown-menu'><a href="#"
-                                                            class="dashboard-nav-dropdown-item">All</a><a
-                        href="#" class="dashboard-nav-dropdown-item">Subscribed</a><a
-                        href="#"
-                        class="dashboard-nav-dropdown-item">Non-subscribed</a><a
-                        href="#" class="dashboard-nav-dropdown-item">Banned</a><a
-                        href="#" class="dashboard-nav-dropdown-item">New</a></div>
-            </div>
-            <div class='dashboard-nav-dropdown'><a href="#!" class="dashboard-nav-item dashboard-nav-dropdown-toggle"><i
-                    class="fas fa-money-check-alt"></i> Payments </a>
-                <div class='dashboard-nav-dropdown-menu'><a href="#"
-                                                            class="dashboard-nav-dropdown-item">All</a><a
-                        href="#" class="dashboard-nav-dropdown-item">Recent</a><a
-                        href="#" class="dashboard-nav-dropdown-item"> Projections</a>
-                </div>
-            </div>
-            <a href="#" class="dashboard-nav-item"><i class="fas fa-cogs"></i> Settings </a><a
-                    href="#" class="dashboard-nav-item"><i class="fas fa-user"></i> Profile </a>
-            <div class="nav-item-divider"></div>
+<span id="message" class="d-none">@TempData["Message"]</span>
 
-            @{
-                System.Diagnostics.Debug.Assert(User.Identity != null, "User.Identity != null");
-            }
-            @if (User.Identity.IsAuthenticated)
-            {
-                <a class="dashboard-nav-item" asp-controller="Account" asp-action="Logout" ><i class="fas fa-sign-out-alt"></i>Logout </a>
-            }
-            else
-            {
-                <a class="dashboard-nav-item" asp-controller="Account" asp-action="Login"><i class="fas fa-sign-in-alt"></i> Login </a>    
-            }
+<body class="bg"style="background-image:url('/backgrounds/backround_2.jpg')">
 
-        </nav>
-    </div>
-    <div class='dashboard-app'>
-        <header class='dashboard-toolbar'><a href="#!" class="menu-toggle"><i class="fas fa-bars"></i></a></header>
-        <div class='dashboard-content'>
-            <div class='container'>
-                <div class='card'>
-                    <div class='card-header'>
-                        <h1>Welcome to Space Adventures Platform</h1>
-                    </div>
-                    <div class='card-body'>
-                        <p></p>
-                    </div>
-                </div>
-            </div>
+<nav class="navbar navbar-expand-sm navbar-light" id="neubar">
+    <div class="container">
+        <a class="navbar-brand" href="#"><img src="" height="60" /><i class="fa-solid fa-shuttle-space"></i> Space Adventures</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class=" collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ms-auto ">
+                <li class="nav-item">
+                    <a class="nav-link mx-2 active" aria-current="page" href="#"><i class="fas fa-home m-1"></i>Home</a>
+                </li>
+
+
+                @{
+                    System.Diagnostics.Debug.Assert(User.Identity != null, "User.Identity != null");
+                }
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <li class="nav-item">
+                        <a class="nav-link mx-2" href="#"><i class="fas fa-tachometer-alt m-1"></i>Dashboard</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link mx-2 dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="fa-solid fa-user-group m-1"></i>Customers
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item" asp-controller="Clients" asp-action="GetClients">All</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="fa-solid fa-plus m-1"></i>New</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="fa-solid fa-pen m-1"></i> Update</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="fa-solid fa-trash m-1"></i> Delete</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link mx-2 dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="fa-solid fa-user-pen m-1"></i>Users
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item" href="#">All</a></li>
+                            <li><a class="dropdown-item" href="#"> <i class="fa-solid fa-plus m-1"></i> New</a></li>
+                            <li><a class="dropdown-item" href="#"> <i class="fa-solid fa-pen m-1"></i> Update</a></li>
+                            <li><a class="dropdown-item" href="#"> <i class="fa-solid fa-trash m-1"></i> Delete</a></li>
+                            <li><a class="dropdown-item" href="#"> <i class="fa-solid fa-eye m-1"></i> Assign role</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link mx-2 dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="fas fa-cart-shopping m-1"></i>Bookings
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item" asp-controller="Clients" asp-action="GetClients">All</a></li>
+                            <li><a class="dropdown-item" href="#"> <i class="fa-solid fa-plus m-1"></i>New</a></li>
+                            <li><a class="dropdown-item" href="#"> <i class="fa-solid fa-pen m-1"></i> Update</a></li>
+                            <li><a class="dropdown-item" href="#"> <i class="fa-solid fa-trash m-1"></i> Delete</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link mx-1" href="#"><i class="fas fa-rocket m-1"></i>Itineraries</a>
+                    </li>
+                }
+                @if (!User.Identity.IsAuthenticated)
+                {
+                    <li class="nav-item">
+                    <a class="nav-link mx-1" href="#"> <i class="fa-solid fa-address-card m-1"></i> About Us</a>
+                    </li>
+                }
+                @{
+                    System.Diagnostics.Debug.Assert(User.Identity != null, "User.Identity != null");
+                }
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <li class="nav-item">
+                        <a class="nav-link btn btn-outline-light mx-1" asp-controller="Account" asp-action="Logout"> <i class="fa-solid fa-user-astronaut m-1"></i>Logout</a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item" href="#">Profile</a></li>
+                        </ul>
+                    </li>
+                }
+                else
+                {
+                    <li class="nav-item">
+                        <a class="nav-link btn btn-outline-light mx-1" asp-controller="Account" asp-action="Login"><i class="fa-solid fa-arrow-right-to-bracket m-1"></i>Login</a>
+                    </li>
+                }
+            </ul>
         </div>
     </div>
-</div>
-
+</nav>
 
 <div class="container">
     <main role="main" class="pb-3">
@@ -90,16 +111,26 @@
     </main>
 </div>
 
-<footer class="border-top footer text-muted">
+<footer class="footer position-fixed text-center">
     <div class="container">
-        &copy; 2022 - SpaceAdventures<a asp-area="" asp-controller="" asp-action=""></a>
+        &copy; Projet WEB | EPHEC 2021 - 2022 | By Antoine HALLET - Corention DECONNINCK - Hammadi CHADLI <a asp-area="" asp-controller="" asp-action=""></a>
     </div>
 </footer>
+</body>
+</html>
+
+
+
+
+
+<script src="~/lib/toastr.js/toastr.min.js"></script>   
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
-<script src="~/js/NavBar.js"></script>
+<script src="~/js/NavBar.js" asp-append-version="true"></script>
+<script src="~/js/toast-notifications.js" asp-append-version="true"></script>
+
 
 @await RenderSectionAsync("Scripts", required: false)
-</body>
-</html>
+
+
