--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
@@ -9,16 +9,20 @@
     <link rel="stylesheet" href="~/lib/font-awesome/css/all.css"/>
     <link rel="stylesheet" href="~/SpaceAdventures.MVC.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/NavBar.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/lib/toastr.js/toastr.min.css"/>
+    <link rel="stylesheet" href="~/lib/toastr.js/toastr.min.css" asp-append-version="true"/>
+
 </head>
 
-<span id="message" class="d-none">@TempData["Message"]</span>
+<span id="message" class="d-none">Logged as : @TempData["Message"]</span>
 
 <body class="bg"style="background-image:url('/backgrounds/backround_2.jpg')">
 
+
+@*Navbar Start*@
+
 <nav class="navbar navbar-expand-sm navbar-light" id="neubar">
     <div class="container">
-        <a class="navbar-brand" href="#"><img src="" height="60" /><i class="fa-solid fa-shuttle-space"></i> Space Adventures</a>
+        <a class="navbar-brand"><i class="fa-solid fa-shuttle-space m-2"></i> Space Adventures</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -26,9 +30,8 @@
         <div class=" collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ms-auto ">
                 <li class="nav-item">
-                    <a class="nav-link mx-2 active" aria-current="page" href="#"><i class="fas fa-home m-1"></i>Home</a>
+                    <a class="nav-link mx-2 active" aria-current="page" asp-controller="Home" asp-action="Index"><i class="fas fa-home m-1"></i>Home</a>
                 </li>
-
 
                 @{
                     System.Diagnostics.Debug.Assert(User.Identity != null, "User.Identity != null");
@@ -36,17 +39,17 @@
                 @if (User.Identity.IsAuthenticated)
                 {
                     <li class="nav-item">
-                        <a class="nav-link mx-2" href="#"><i class="fas fa-tachometer-alt m-1"></i>Dashboard</a>
+                        <a class="nav-link mx-2" asp-controller="Home" asp-action="Dashboard"><i class="fas fa-tachometer-alt m-1"></i>Dashboard</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link mx-2 dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link mx-2 dropdown-toggle" asp-controller="" asp-action="" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="fa-solid fa-user-group m-1"></i>Customers
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" asp-controller="Clients" asp-action="GetClients">All</a></li>
-                            <li><a class="dropdown-item" href="#"><i class="fa-solid fa-plus m-1"></i>New</a></li>
-                            <li><a class="dropdown-item" href="#"><i class="fa-solid fa-pen m-1"></i> Update</a></li>
-                            <li><a class="dropdown-item" href="#"><i class="fa-solid fa-trash m-1"></i> Delete</a></li>
+                            <li><a class="dropdown-item" asp-controller="Clients" asp-action="GetClients"><i class="fa-solid fa-list m-2"></i> All</a></li>
+                            <li><a class="dropdown-item" asp-controller="" asp-action=""><i class="fa-solid fa-plus m-2"></i>New</a></li>
+                            <li><a class="dropdown-item" asp-controller="" asp-action=""><i class="fa-solid fa-pen m-2"></i> Update</a></li>
+                            <li><a class="dropdown-item" asp-controller="" asp-action=""><i class="fa-solid fa-trash m-2"></i> Delete</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -54,34 +57,37 @@
                             <i class="fa-solid fa-user-pen m-1"></i>Users
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#">All</a></li>
-                            <li><a class="dropdown-item" href="#"> <i class="fa-solid fa-plus m-1"></i> New</a></li>
-                            <li><a class="dropdown-item" href="#"> <i class="fa-solid fa-pen m-1"></i> Update</a></li>
-                            <li><a class="dropdown-item" href="#"> <i class="fa-solid fa-trash m-1"></i> Delete</a></li>
-                            <li><a class="dropdown-item" href="#"> <i class="fa-solid fa-eye m-1"></i> Assign role</a></li>
+                            <li><a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-list m-2"></i> All</a></li>
+                            <li><a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-plus m-2"></i> New</a></li>
+                            <li><a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-pen m-2"></i> Update</a></li>
+                            <li><a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-trash m-2"></i> Delete</a></li>
+                            <li><a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-eye m-2"></i> Assign role</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link mx-2 dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link mx-2 dropdown-toggle" asp-controller="" asp-action="" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="fas fa-cart-shopping m-1"></i>Bookings
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" asp-controller="Clients" asp-action="GetClients">All</a></li>
-                            <li><a class="dropdown-item" href="#"> <i class="fa-solid fa-plus m-1"></i>New</a></li>
-                            <li><a class="dropdown-item" href="#"> <i class="fa-solid fa-pen m-1"></i> Update</a></li>
-                            <li><a class="dropdown-item" href="#"> <i class="fa-solid fa-trash m-1"></i> Delete</a></li>
+                            <li><a class="dropdown-item" asp-controller="Clients" asp-action="GetClients"><i class="fa-solid fa-list m-2"></i> All</a></li>
+                            <li><a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-plus m-2"></i>New</a></li>
+                            <li><a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-pen m-2"></i> Update</a></li>
+                            <li><a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-trash m-2"></i> Delete</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link mx-1" href="#"><i class="fas fa-rocket m-1"></i>Itineraries</a>
                     </li>
                 }
-                @if (!User.Identity.IsAuthenticated)
-                {
-                    <li class="nav-item">
-                    <a class="nav-link mx-1" href="#"> <i class="fa-solid fa-address-card m-1"></i> About Us</a>
-                    </li>
-                }
+                
+                
+            @if (!User.Identity.IsAuthenticated)
+            {
+                <li class="nav-item">
+                    <a class="nav-link mx-1" asp-controller="Home" asp-action="About"> <i class="fa-solid fa-address-card m-1"></i> About Us</a>
+                </li>
+            }
+                
                 @{
                     System.Diagnostics.Debug.Assert(User.Identity != null, "User.Identity != null");
                 }
@@ -89,10 +95,9 @@
                 {
                     <li class="nav-item">
                         <a class="nav-link btn btn-outline-light mx-1" asp-controller="Account" asp-action="Logout"> <i class="fa-solid fa-user-astronaut m-1"></i>Logout</a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#">Profile</a></li>
-                        </ul>
                     </li>
+
+                    <li><a class="nav-link mx-1 d-none"> @TempData["Message"]</a></li>
                 }
                 else
                 {
@@ -104,6 +109,13 @@
         </div>
     </div>
 </nav>
+
+@*Navbar End*@
+
+@*Start Carousel*@
+
+
+@*End Carousel*@
 
 <div class="container">
     <main role="main" class="pb-3">
@@ -119,17 +131,11 @@
 </body>
 </html>
 
-
-
-
-
 <script src="~/lib/toastr.js/toastr.min.js"></script>   
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
-<script src="~/js/NavBar.js" asp-append-version="true"></script>
 <script src="~/js/toast-notifications.js" asp-append-version="true"></script>
-
 
 @await RenderSectionAsync("Scripts", required: false)
 
