MVC Services | dashboard AJax Call

--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Home/Dashboard.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Home/Dashboard.cshtml
@@ -16,7 +16,7 @@
             <div class="card bg-c-blue order-card">
                 <div class="card-block">
                     <h6 class="m-b-20">Customers</h6>
-                    <h2 class="text-right"><i class="fa-solid fa-user-group f-left m-2"></i><span id="customers"></span></h2>
+                    <h2 class="text-right"><i class="fa-solid fa-user-group f-right m-2"></i><span id="customers"></span></h2>  
                     <p class="m-b-0 pt-2 m-2">Total customers<span class="f-right"></span></p>
                 </div>
             </div>
