Ajax Calls Script (Dashboard) | Missing Mapping Fixed | Icons

--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Home/Dashboard.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Home/Dashboard.cshtml
@@ -26,17 +26,17 @@
             <div class="card bg-c-green order-card">
                 <div class="card-block">
                     <h6 class="m-b-20">Aircraft</h6>
-                    <h2 class="text-right"><i class="fa-solid fa-rocket f-left m-2"></i><span id="aircraft"></span></h2>
+                    <h2 class="text-right"><i class="fa-solid fa-rocket f-right m-2"></i><span id="aircraft"></span></h2>
                     <p class="m-b-0 pt-2 m-2">Total Aircrafts<span class="f-right"></span></p>
                 </div>
             </div>
         </div>
         
-        <div class="col-md-4 col-xl-3">
+        <div class="col-md-4 col-xl-3"> 
             <div class="card bg-c-yellow order-card">
                 <div class="card-block">
                     <h6 class="m-b-20">Booking</h6>
-                    <h2 class="text-right"><i class="fa fa-cart-shopping f-left m-2"></i><span id="bookings"></span></h2>  
+                    <h2 class="text-right"><i class="fa fa-cart-shopping f-right m-2"></i><span id="bookings"></span></h2>  
                     <p class="m-b-0 pt-2 m-2">Completed Bookings<span class="f-right"></span></p>
                 </div>
             </div>
@@ -46,7 +46,7 @@
             <div class="card bg-c-pink order-card">
                 <div class="card-block">
                     <h6 class="m-b-20">Users</h6>
-                    <h2 class="text-right"><i class="fa fa-credit-card f-left m-2"></i><span id="users"></span></h2>
+                    <h2 class="text-right"><i class="fa fa-user-check f-right m-2"></i><span id="users"></span></h2>
                     <p class="m-b-0 pt-2 m-2">Total users<span class="f-right"></span></p>
                 </div>
             </div>
