--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
 
 @*Navbar Start*@
 
-<nav class="navbar navbar-expand-sm navbar-light" id="neubar">
+<nav class="navbar navbar-expand-sm navbar-light fixed-top" id="neubar">
     <div class="container">
         <a class="navbar-brand"><i class="fa-solid fa-shuttle-space m-2"></i> Space Adventures</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
