--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
@@ -69,7 +69,7 @@
                             <i class="fas fa-cart-shopping m-1"></i>Bookings
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" asp-controller="Clients" asp-action="GetClients"><i class="fa-solid fa-list m-2"></i> All</a></li>
+                            <li><a class="dropdown-item" asp-controller="Bookings" asp-action="GetBookings"><i class="fa-solid fa-list m-2"></i> All</a></li>
                             <li><a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-plus m-2"></i>New</a></li>
                             <li><a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-pen m-2"></i> Update</a></li>
                             <li><a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-trash m-2"></i> Delete</a></li>
@@ -81,10 +81,10 @@
                             <i class="fas fa-rocket m-1"></i>Other
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-list m-2"></i>Aircrafts </a></li>
-                            <li><a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-plus m-2"></i>Airports</a></li>
-                            <li><a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-pen m-2"></i>Itineraries</a></li>
-                            <li><a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-trash m-2"></i>Other</a></li>
+                            <li><a class="dropdown-item" asp-controller="Aircrafts" asp-action="GetAircrafts"> <i class="fa-solid fa-jet-fighter m-2"></i>Aircrafts </a></li>
+                            <li><a class="dropdown-item" asp-controller="Airports" asp-action="GetAirports"> <i class="fa-solid fa-plane-departure m-2"></i>Airports</a></li>
+                            <li><a class="dropdown-item" asp-controller="Itineraries" asp-action="GetItineraries"> <i class="fa-solid fa-rocket m-2"></i>Itineraries</a></li>
+                            <li><a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-rocket m-2"></i>Other</a></li>
                         </ul>
                     </li>
                 }
