--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
@@ -42,26 +42,16 @@
                         <a class="nav-link mx-2" asp-controller="Home" asp-action="Dashboard"><i class="fas fa-tachometer-alt m-1"></i>Dashboard</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link mx-2 dropdown-toggle" asp-controller="" asp-action="" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="fa-solid fa-user-group m-1"></i>Customers
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" asp-controller="Clients" asp-action="GetClients"><i class="fa-solid fa-list m-2"></i> All</a></li>
-                            <li><a class="dropdown-item" asp-controller="" asp-action=""><i class="fa-solid fa-plus m-2"></i>New</a></li>
-                            <li><a class="dropdown-item" asp-controller="" asp-action=""><i class="fa-solid fa-pen m-2"></i> Update</a></li>
-                            <li><a class="dropdown-item" asp-controller="" asp-action=""><i class="fa-solid fa-trash m-2"></i> Delete</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
                         <a class="nav-link mx-2 dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="fa-solid fa-user-pen m-1"></i>Users
+                            <i class="fa-solid fa-user-cog m-1"></i>Users
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <li><a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-list m-2"></i> All</a></li>
                             <li><a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-plus m-2"></i> New</a></li>
                             <li><a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-pen m-2"></i> Update</a></li>
                             <li><a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-trash m-2"></i> Delete</a></li>
-                            <li><a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-eye m-2"></i> Assign role</a></li>
+                            <li><a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-eye m-2"></i> Assign Role</a></li>
+                            <li><a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-key m-2"></i>Send Password Reset</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -69,7 +59,7 @@
                             <i class="fas fa-cart-shopping m-1"></i>Bookings
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" asp-controller="Bookings" asp-action="GetBookings"><i class="fa-solid fa-list m-2"></i> All</a></li>
+                            <li><a class="dropdown-item" asp-controller="" asp-action=""><i class="fa-solid fa-list m-2"></i> All</a></li>
                             <li><a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-plus m-2"></i>New</a></li>
                             <li><a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-pen m-2"></i> Update</a></li>
                             <li><a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-trash m-2"></i> Delete</a></li>
@@ -78,12 +68,13 @@
                     <li class="nav-item dropdown">
                         
                         <a class="nav-link mx-2 dropdown-toggle" asp-controller="" asp-action="" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="fas fa-rocket m-1"></i>Other
+                            <i class="fa-solid fa-gears m-2"></i>Settings
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <li><a class="dropdown-item" asp-controller="Aircrafts" asp-action="GetAircrafts"> <i class="fa-solid fa-jet-fighter m-2"></i>Aircrafts </a></li>
                             <li><a class="dropdown-item" asp-controller="Airports" asp-action="GetAirports"> <i class="fa-solid fa-plane-departure m-2"></i>Airports</a></li>
                             <li><a class="dropdown-item" asp-controller="Itineraries" asp-action="GetItineraries"> <i class="fa-solid fa-rocket m-2"></i>Itineraries</a></li>
+                            <li><a class="dropdown-item" asp-controller="Clients" asp-action="GetClients"> <i class="fa-solid fa-user-group m-2"></i>Customers</a></li>
                             <li><a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-rocket m-2"></i>Other</a></li>
                         </ul>
                     </li>
