--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Home/SolarSystem.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Home/SolarSystem.cshtml
@@ -6,7 +6,9 @@
 <!DOCTYPE html>
 
 <html>
-    <link rel="stylesheet" href="~/css/solarsystem.css">
+<link rel="stylesheet" href="~/css/solarsystem.css" asp-append-version="true"/>
+<link rel="stylesheet" href="~/lib/toastr.js/toastr.min.css" asp-append-version="true"/>
+<link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
 
 
 <body class="opening hide-UI view-2D zoom-large data-close controls-close">
@@ -112,7 +114,7 @@
             <div id="saturn" class="orbit">
                 <div class="pos">
                     <div class="planet">
-                        <div class="ring"></div>
+                            <div class="ring"></div>
                         <dl class="infos">
                             <dt>Saturn</dt>
                             <dd><span></span></dd>
@@ -157,9 +159,10 @@
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
 <script type="text/javascript">
-if (typeof jQuery == 'undefined') { 
-    document.write(unescape("%3Cscript src='js/jquery.min.js' type='text/javascript'%3E%3C/script%3E"));
-}
+    if (typeof jQuery == 'undefined') { 
+        document.write(unescape("%3Cscript src='js/jquery.min.js' type='text/javascript'%3E%3C/script%3E"));
+    }
 </script>
 
 <script src="~/js/solarsystem.js"></script>
+<script src="~/lib/toastr.js/toastr.min.js"></script>
