--- a/SpaceAdventures/SpaceAdventures.MVC/wwwroot/css/site.css
+++ b/SpaceAdventures/SpaceAdventures.MVC/wwwroot/css/site.css
@@ -70,8 +70,9 @@ body {
 
 /********* ToastR CSS*********/
 #toast-container {
-    margin-top: 60px;
-    margin-right: 10px;
+    margin-top: 80px;
+    margin-right: 15px;
+    font-size :medium;
 }
 
 
