SolarSystem Home Button

--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Home/Dashboard.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Home/Dashboard.cshtml
@@ -18,7 +18,7 @@
                     <h2 class="text-right">
                         <i class="fa-solid fa-user-group f-right m-2"></i><span id="customers"></span>
                     </h2>
-                    <p class="m-b-0 pt-2 m-2">Total customers<span class="f-right"></span></p>
+                    <p class="m-b-0 pt-2 m-2">Total Customers<span class="f-right"></span></p>
                 </div>
             </div>
         </div>
@@ -54,7 +54,7 @@
                     <h2 class="text-right">
                         <i class="fa fa-user-check f-right m-2"></i><span id="users"></span>
                     </h2>
-                    <p class="m-b-0 pt-2 m-2">Total users<span class="f-right"></span></p>
+                    <p class="m-b-0 pt-2 m-2">Total Users<span class="f-right"></span></p>
                 </div>
             </div>
         </div>
