--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Home/SolarSystem.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Home/SolarSystem.cshtml
@@ -14,7 +14,7 @@
 <div id="navbar">
     <a id="toggle-data" href="#data"><i class="icon-data"></i>Planets</a>
     <h1> Space Adventures - 3D Solar System<br><span>by <a href="#" target="_blank"></a>Antoine, Corentin and Hammadi</span></h1>
-    <h1 class="text-lg-center" id="home" style="cursor: pointer">Home</h1>
+    <h1 class="text-lg-center" id="home" style="cursor: pointer; font-size: xx-large">Home</h1>
     <a id="toggle-controls" href="#controls"><i class="icon-controls"></i>Controls</a>
 </div>
 
