--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <li>
-                                <a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-list m-2"></i> All</a>
+                                <a class="dropdown-item" asp-controller="UserManagement" asp-action="CreateUser"> <i class="fa-solid fa-list m-2"></i> All</a>
                             </li>
                             <li>
                                 <a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-plus m-2"></i> New</a>
