--- a/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/UserSignUp.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/UserSignUp.cshtml
@@ -1,20 +1,17 @@
 ﻿@model SpaceAdventures.MVC.Models.UserInput
 
 @{
-    ViewData["Title"] = "CreateUser";
+    ViewData["Title"] = "UserSignUp";
 }
 
+<h1>UserSignUp</h1>
 
-
-
-<h1>CreateUser</h1>
-
-<h4>User</h4>
+<h4>UserInput</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="CreateUser">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <form asp-action="UserSignUp">
+           <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group mb-2">
                 <label asp-for="Lastname" class="control-label text-white"></label>
                 <input asp-for="Lastname" class="form-control" />
@@ -46,22 +43,18 @@
                 <input asp-for="Password"  value="test" class="form-control" readonly="readonly" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-             <div class="form-group mb-2">
+             <div class="form-group mb-2 d-none">
                 <label asp-for="IdRole" class="control-label text-white"></label>
-                @Html.DropDownListFor(x => Model.IdRole, new SelectList(ViewBag.ListRole, "Value", "Text"));
+                 <input asp-for="IdRole"  value="4" class="form-control" readonly="readonly" />
                 <span asp-validation-for="IdRole" class="text-danger"></span>
             </div>
-            </br>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-success" /> | <a class="btn btn-primary" asp-action="GetAllUsers">Back to List</a>
+            
+            <div class="form-group m-2">
+                <input type="submit" value="Create" class="btn btn-success" /> | <a class="btn btn-primary" asp-controller="Home" asp-action="Index">Back to Home page</a>
             </div>
         </form>
     </div>
 </div>
-
-</br>
-
-
 
 
 @section Scripts {
