--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
@@ -68,7 +68,7 @@
                                 <a class="dropdown-item" asp-controller="" asp-action=""><i class="fa-solid fa-list m-2"></i> All</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-plus m-2"></i>New</a>
+                                <a class="dropdown-item" asp-controller="Booking" asp-action="Index"> <i class="fa-solid fa-plus m-2"></i>New</a>
                             </li>
                             <li>
                                 <a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-pen m-2"></i> Update</a>
@@ -112,6 +112,7 @@
                     <li class="nav-item">
                         <a class="nav-link mx-1" asp-controller="Home" asp-action="SolarSystem"> <i class="fa-solid fa-rocket - m-1"></i> Solar System</a>
                     </li>
+                   
                 }
 
                 @{
