--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Booking/CreateBooking.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Booking/CreateBooking.cshtml
@@ -15,27 +15,27 @@
             <div asp-validation-summary="ModelOnly" class="text-danger "></div>
             <div class="form-group">
                 <label asp-for="Lastname" class="control-label text-white"></label>
-                <input asp-for="Lastname" class="form-control" />
+                <input asp-for="Lastname" class="form-control BiggerBox" />
                 <span asp-validation-for="Lastname" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="FirstName" class="control-label text-white"></label>
-                <input asp-for="FirstName" class="form-control" />
+                <input asp-for="FirstName" class="form-control BiggerBox" />
                 <span asp-validation-for="FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Email" class="control-label text-white"></label>
-                <input asp-for="Email" class="form-control" />
+                <input asp-for="Email" class="form-control BiggerBox" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="IdItinerary" class="control-label text-white"></label>
-                <input asp-for="IdItinerary" class="form-control" />
+                <input asp-for="IdItinerary" class="form-control BiggerBox" />
                 <span asp-validation-for="IdItinerary" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="IdFlight" class="control-label text-white"></label>
-                <input asp-for="IdFlight" class="form-control" />
+                <input asp-for="IdFlight" class="form-control BiggerBox" />
                 <span asp-validation-for="IdFlight" class="text-danger"></span>
             </div>
             <div class="form-group">
