--- a/SpaceAdventures/SpaceAdventures.MVC/wwwroot/css/Booking.css
+++ b/SpaceAdventures/SpaceAdventures.MVC/wwwroot/css/Booking.css
@@ -1,10 +1,14 @@
 .flex-container {
     display: flex;
+    
 }
 
 .column {
     float: left;
     width: 50%;
     padding: 5px;
- 
+}
+
+.BiggerBox {
+    width: 400px;
 }
