--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
 
 </head>
 
-<span id="message" class="d-none">Logged as : @TempData["Message"]</span>
+<span id="message" class="d-none">@TempData["Message"]</span>
 
 <body class="bg"style="background-image: url('/backgrounds/backround_2.jpg')">
 
