Retrieving User Role in order to hide views

--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
@@ -134,7 +134,7 @@
                         <a class="nav-link btn btn-outline-light mx-1" asp-controller="Account" asp-action="Login"><i class="fa-solid fa-arrow-right-to-bracket m-1"></i>Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link btn btn-outline-light btn-sm mx-1" asp-controller="UserManagement" asp-action="UserSignUp"><i class="fa-solid fa-right-to-bracket m-2"></i>Sign Up</a>
+                        <a class="nav-link btn btn-outline-light btn-sm mx-1" asp-controller="UserManagement" asp-action="UserSignUp"><i class="fa-solid fa-user-plus m-2"></i>Sign Up</a>
                     </li>
                 }
             </ul>
