--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
 ﻿@using System.Diagnostics
+@using SpaceAdventures.MVC.Models.Enums
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,14 +17,15 @@
 
 <span id="message" class="d-none">@TempData["Message"]</span>
 
+
 <body class="bg"style="background-image: url('/backgrounds/backround_2.jpg')">
 
 
 @*Navbar Start*@
 
-<nav class="navbar navbar-expand-sm navbar-light fixed-top" id="neubar">
+<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="neubar">
     <div class="container">
-        <a class="navbar-brand"><i class="fa-solid fa-shuttle-space m-2"></i> Space Adventures</a>
+        <a><i class="fa-solid fa-shuttle-space m-2"></i> Space Adventures</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -37,28 +39,46 @@
                 @{
                     Debug.Assert(User.Identity != null, "User.Identity != null");
                 }
-                @if (User.Identity.IsAuthenticated)
+                @if (User.Identity.IsAuthenticated && @TempData["Role"]!.ToString() != RolesType.User.ToString())
                 {
                     <li class="nav-item">
                         <a class="nav-link mx-2" asp-controller="Home" asp-action="Dashboard"><i class="fas fa-tachometer-alt m-1"></i>Dashboard</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link mx-2 dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="fa-solid fa-user-cog m-1"></i>Users
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li>
-                                <a class="dropdown-item" asp-controller="UserManagement" asp-action="GetAllUsers"> <i class="fa-solid fa-list m-2"></i> All</a>
-                            </li>
+
+                    /***  Users DropdownList ***/
+
+
+                    @if (@TempData["Role"]!.ToString() != RolesType.Agent.ToString() && @TempData["Role"]!.ToString() != RolesType.User.ToString())
+                    {
+                        <li class="nav-item dropdown">
+                            <a class="nav-link mx-2 dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="fa-solid fa-user-cog m-1"></i>Users
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                <li>
+                                    <a class="dropdown-item" asp-controller="UserManagement" asp-action="GetAllUsers"> <i class="fa-solid fa-list m-2"></i> All</a>
+                                </li>
                             
-                            <li>
-                                <a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-eye m-2"></i> Assign Role</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-key m-2"></i>Send Password Reset</a>
-                            </li>
-                        </ul>
-                    </li>
+                                @if (TempData["Role"].ToString() != RolesType.Agent.ToString() && TempData["Role"].ToString() != RolesType.Admin.ToString())
+                                {
+                                    <li>
+                                        <a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-eye m-2"></i> Assign Role</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-key m-2"></i>Send Password Reset</a>
+                                    </li>
+                                }
+                            </ul>
+                        </li>
+                    }
+
+
+                    /*** END ***/
+
+
+                    /***  Bookings DropdownList ***/
+
+
                     <li class="nav-item dropdown">
                         <a class="nav-link mx-2 dropdown-toggle" asp-controller="" asp-action="" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="fas fa-cart-shopping m-1"></i>Bookings
@@ -67,17 +87,25 @@
                             <li>
                                 <a class="dropdown-item" asp-controller="" asp-action=""><i class="fa-solid fa-list m-2"></i> All</a>
                             </li>
-                            <li>
-                                <a class="dropdown-item" asp-controller="Booking" asp-action="Index"> <i class="fa-solid fa-plus m-2"></i>New</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-pen m-2"></i> Update</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-trash m-2"></i> Delete</a>
-                            </li>
+
+                            @if (TempData["Role"].ToString() != RolesType.Agent.ToString())
+                            {
+                                <li>
+                                    <a class="dropdown-item" asp-controller="Booking" asp-action="Index"> <i class="fa-solid fa-plus m-2"></i>New</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-pen m-2"></i> Update</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-trash m-2"></i> Delete</a>
+                                </li>
+                            }
                         </ul>
                     </li>
+
+                    /*** END ***/
+
+
                     <li class="nav-item dropdown">
 
                         <a class="nav-link mx-2 dropdown-toggle" asp-controller="" asp-action="" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -96,13 +124,11 @@
                             <li>
                                 <a class="dropdown-item" asp-controller="Clients" asp-action="GetClients"> <i class="fa-solid fa-user-group m-2"></i>Customers</a>
                             </li>
-                            <li>
-                                <a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-rocket m-2"></i>Other</a>
-                            </li>
                         </ul>
                     </li>
                 }
-
+                
+                @*/***  Bookings DropdownList ***/*@
 
                 @if (!User.Identity.IsAuthenticated)
                 {
@@ -112,8 +138,10 @@
                     <li class="nav-item">
                         <a class="nav-link mx-1" asp-controller="Home" asp-action="SolarSystem"> <i class="fa-solid fa-rocket - m-1"></i> Solar System</a>
                     </li>
-                   
                 }
+                
+                @*/*** END ***/*@
+
 
                 @{
                     Debug.Assert(User.Identity != null, "User.Identity != null");
@@ -121,20 +149,19 @@
                 @if (User.Identity.IsAuthenticated)
                 {
                     <li class="nav-item">
-                        <a class="nav-link btn btn-outline-light mx-1" asp-controller="Account" asp-action="Logout"> <i class="fa-solid fa-user-astronaut m-1"></i>Logout</a>
+                        <a class="nav-link btn btn-sm btn-outline-light mx-1" asp-controller="Account" asp-action="Logout"> <i class="fa-solid fa-user-astronaut m-1"></i>Logout</a>
                     </li>
-
                     <li>
-                        <a class="nav-link mx-1 d-none"> @TempData["Message"]</a>
+                        <a class="nav-link mt-1 text-sm-start"> @User.Identity.Name | @TempData["Role"]</a>
                     </li>
                 }
                 else
                 {
                     <li class="nav-item">
-                        <a class="nav-link btn btn-outline-light mx-1" asp-controller="Account" asp-action="Login"><i class="fa-solid fa-arrow-right-to-bracket m-1"></i>Login</a>
+                        <a class="nav-link btn btn-sm btn-outline-light mx-1" asp-controller="Account" asp-action="Login"><i class="fa-solid fa-arrow-right-to-bracket m-1"></i>Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link btn btn-outline-light btn-sm mx-1" asp-controller="UserManagement" asp-action="UserSignUp"><i class="fa-solid fa-user-plus m-2"></i>Sign Up</a>
+                        <a class="nav-link btn btn-sm btn-outline-light mx-1" asp-controller="UserManagement" asp-action="UserSignUp"><i class="fa-solid fa-user-plus m-2"></i>Sign Up</a>
                     </li>
                 }
             </ul>
